# roll

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/: __init__.py  init_database.py
core/entities/: __init__.py
core/interfaces/: repositories.py
repositories/: person_repository.py
src/attendance_recorder/core/entities/: event.py  identifier.py  person.py
src/attendance_recorder/core/interfaces/: __init__.py
src/roll/: __init__.py  __main__.py
src/roll/core/: __init__.py  init_database.py  setup_logging.py
src/roll/core/entities/: __init__.py  attendance.py  event.py  identifier.py  person.py
src/roll/core/interfaces/: __init__.py  repositories.py  services.py
src/roll/queries/: on_init.sql
src/roll/repositories/: __init__.py  attendance_repository.py  base_qsqlite_repository.py  event_repository.py  exceptions.py  identifier_repository.py  person_repository.py
src/roll/services/: __init__.py  attendance_service.py  event_service.py  exceptions.py  identifier_service.py  person_service.py  qr_generator_service.py  qr_reader_service.py  verification_service.py
src/roll/ui/: __init__.py  event_dialog.py  main_windows.py  person_qr_dialog.py  qr_scanner_dialog.py  styles.py
