[project]
name = "roll"
version = "0.1.0"
description = "GUI app for recording attendance events."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
roll = "roll.__main__:main"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
dummy-variable-rgx = "^_+$"
select = ["ALL"]

ignore = [
    "D203",
    "D213",
    "COM812",
    "ISC001",
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "S101",
    "D",
    "ANN",
    "PLR2004",
    "ARG001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.basedpyright]
include = ["src/roll/"]
typeCheckingMode = "all"
pythonVersion = "3.14"

[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportMissingParameterType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportMissingTypeArgument = false
reportUnusedParameter = false
reportGeneralTypeIssues = false
extraPaths = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/roll/"] 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.sqlfluff.core]
dialect = "sqlite"
templater = "raw"
max_line_length = 88
ignore = "None"
rules = "all" 

[tool.sqlfluff.indentation]
tab_width = 4
indent_unit = "space"
indented_joins = false
indented_ctes = true

[tool.sqlfluff.rules.aliasing.table]
aliasing = "explicit"

[tool.sqlfluff.rules.aliasing.column]
aliasing = "explicit"

[tool.sqlfluff.rules.aliasing.expression]
allow_implicit_aliases = false

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.types]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.functions]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.layout.commas]
line_position = "leading"

[tool.sqlfluff.rules.structure.join_on_condition]
